fix: can't drag vertically on mobile devices

--- a/src/components/SortableItem/SortableItem.module.css
+++ b/src/components/SortableItem/SortableItem.module.css
@@ -1,3 +1,3 @@
-.SortableItem {
-  
+.sortable-item {
+    touch-action: none;
 }
